Fix line break in card titles

--- a/app/assets/stylesheets/bcnencomu/_consultations.scss
+++ b/app/assets/stylesheets/bcnencomu/_consultations.scss
@@ -1,6 +1,6 @@
 .multiple_votes_form_group_title {
 	h5  {
-		flex-shrink: 1;
+		flex-shrink: 1 !important;
 		label {
 			font-size: inherit;
 			font-weight: inherit;
